Bug 481911 - Content font size setting is not respected for post content
Summary: Content font size setting is not respected for post content
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-27 22:10 UTC by Jure Repinc
Modified: 2024-05-11 15:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments
Screenshot of Tokodon font size bug (1.37 MB, image/png)
2024-02-27 22:10 UTC, Jure Repinc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2024-02-27 22:10:47 UTC
Created attachment 166146 [details]
Screenshot of Tokodon font size bug

This is for Tokodon version 24.04.70. Content font size appears to only apply to display and account name of the poster and not to the post content itself


STEPS TO REPRODUCE
1. Open settings
2. Change content font size to something big

OBSERVED RESULT
Only Display and account names are enlarged, the font size of post content remains the same

EXPECTED RESULT
Content post font size should also become bigger.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240225
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.6-1-default (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 7600 6-Core Processor
Memory: 31.1 GiB of RAM
Graphics Processor: AMD Radeon RX 480 Graphics
Comment 1 Bauglir 2024-04-12 23:57:24 UTC
I suppose reported version of Tokodon is a typo (¿24.04.70?), but I can confirm this issue in 24.02.1. By the way, with this minute font size the app is barely usable on a 24" FullHD screen, with no eyesight problems.
Comment 2 Sky Barnes 2024-05-04 15:53:24 UTC
I'm running into the same issue, and I wanted to add that for me, the usernames use the content font setting, but the actual content stays in the default font.
Comment 3 Joshua Goins 2024-05-11 15:08:14 UTC
Ah I know why this is happening, it's an accidental side effect of some other change. I'll see if I can try to fix it.
Comment 4 Joshua Goins 2024-05-11 15:24:24 UTC
Git commit 6a5e76d16b830ab974539f87b27d90c5a5911c67 by Joshua Goins.
Committed on 11/05/2024 at 15:24.
Pushed by redstrate into branch 'master'.

Fix the content font not actually affecting the post text

This was a dumb mistake on my part, the QTextDocument needs a
defaultFont set.

M  +1    -1    src/account/notificationhandler.cpp
M  +2    -2    src/autotests/posttest.cpp
M  +1    -2    src/autotests/timelinetest.cpp
M  +1    -2    src/content/ui/PostDelegate/PostContent.qml
M  +1    -9    src/timeline/post.cpp
M  +0    -7    src/timeline/post.h
M  +5    -2    src/utils/texthandler.cpp
M  +7    -3    src/utils/texthandler.h

https://invent.kde.org/network/tokodon/-/commit/6a5e76d16b830ab974539f87b27d90c5a5911c67
Comment 5 Joshua Goins 2024-05-11 15:24:42 UTC
Git commit ecbef0a62500dc821e651f721027fb4d88291a96 by Joshua Goins.
Committed on 11/05/2024 at 15:24.
Pushed by redstrate into branch 'release/24.05'.

Fix the content font not actually affecting the post text

This was a dumb mistake on my part, the QTextDocument needs a
defaultFont set.
(cherry picked from commit 6a5e76d16b830ab974539f87b27d90c5a5911c67)

M  +1    -1    src/account/notificationhandler.cpp
M  +2    -2    src/autotests/posttest.cpp
M  +1    -2    src/autotests/timelinetest.cpp
M  +1    -2    src/content/ui/PostDelegate/PostContent.qml
M  +1    -9    src/timeline/post.cpp
M  +0    -7    src/timeline/post.h
M  +5    -2    src/utils/texthandler.cpp
M  +7    -3    src/utils/texthandler.h

https://invent.kde.org/network/tokodon/-/commit/ecbef0a62500dc821e651f721027fb4d88291a96