Fix the content font not actually affecting the post text

This was a dumb mistake on my part, the QTextDocument needs a
defaultFont set.

BUG: 481911