src/timeline/post.cpp
@@ -222,11 +222,6 @@ QString Post::content() const
     return m_content;
 }
 
-QString Post::plainContent() const
-{
-    return m_plainContent;
-}
-
 bool Post::hasContent() const
 {
     return m_hasContent;
@@ -497,10 +492,7 @@ void Post::processContent(const QJsonObject &obj)
     m_standaloneTags = standaloneTags;
 
     m_hasContent = !standaloneContent.isEmpty();
-
-    // Finally, fix the bidirectionality of text if needed. See BUG 475043 for more details.
-    m_content = TextHandler::fixBidirectionality(standaloneContent);
-    m_plainContent = standaloneContent;
+    m_content = standaloneContent;
 }
 
 Card::Card(QJsonObject card)
